# local-recommendation-bot

./: .buildinfo  MANIFEST.in  README.md  babel.cfg  core.py  dodo.py  genindex.html  geoguesser_bot.py  geoguessr_bot.py  index.html  messages.pot  my_telegram_bot.py  objects.inv  pyproject.toml  requirements.txt  sandbox.ipynb  search.html  searchindex.js  telebot.py
.doctrees/: environment.pickle  index.doctree
.github/workflows/: documentation.yaml  flake8.yml  pydocstyle.yml  pytest.yml
_sources/: index.rst.txt
_static/: documentation_options.js
core/: recommender.py  state_diagram.py  test_ut.py  utils.py
doc/: conf.py  index.rst
doc/_build/doctrees/: environment.pickle  index.doctree
doc/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/: conf.py
docs/source/: index.rst
geoguesser_bot/: __init__.py
local_recommendation_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
locale/en/LC_MESSAGES/: messages.mo  messages.po
src/: utils.py
src/core/: state_diagram.py  test_ut.py
src/geoguesser_bot/: __init__.py  __main__.py
src/locale/en/LC_MESSAGES/: messages.po
storage/: history
