[project]
name = "local-recommendation-bot"
version = "2023.05.25"
description = "Bot with opportunity of geo-recommendations (Exam project for PythonDevelopment2023 course)."
readme = "README.md"
requires-python = "<=3.11.2"
license = {text = "MIT License"}
keywords = ["geo", "project", "recommendation"]
authors = [
  {name = "Бикметов Данил Наильевич", email = "some_email@example.com"},
  {name = "Сумина Евгения Александровна", email = "eugenia.sumina@yandex.ru"},
  {name = "Попов Дмитрий Николаевич", email = "some_email@example.com"}
]
maintainers = [
  {name = "Сумина Евгения Александровна", email = "eugenia.sumina@yandex.ru"}
]
classifiers = [
  "Development Status :: 1 - Beta",
  "Programming Language :: Python"
]
dynamic = ["dependencies"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }


[project.urls]
Repository = "https://github.com/hgfs113/local-recommendation-bot"

[project.scripts]
geoguesser_bot = "geoguesser_bot:main"

[build-system]
requires = ["setuptools", "pytest", "build", "doit",
            "flake8", "pydocstyle", "coverage", "sphinx"]
build-backend = "setuptools.build_meta"

[bdist_wheel]
universal = 1
